--- a/index.css
+++ b/index.css
@@ -55,10 +55,10 @@ body {
   color: cyan;
 }
 
-.main {
+.spacing {
   padding: 16px;
-  margin-top: 300px;
-  height: 3000px; /* Used in this example to enable scrolling */
+  margin-top: 400px;
+  /* height: 3000px; Used in this example to enable scrolling */
 }
 
 #welcome {
@@ -88,11 +88,47 @@ body {
   float: right;
 }
 
+#h1about {
+  padding: 40px;
+}
+
 #about {
   font-family: nunito;
   font-size: 20px;
   color: white;
   margin-top: 400px;
+  margin-left: 20px;
+}
+
+#me {
+  width: 300px;
+  height: 300px;
+  border: 5px solid;
+  border-radius: 10px;
+  position: relative;
+  float: right;
+}
+
+#me2 {
+  width: 300px;
+  height: 300px;
+  border: 5px solid;
+  border-radius: 10px;
+  position: relative;
+  float: right;
+}
+
+#me3 {
+  width: 300px;
+  height: 300px;
+  margin-left: 400px;
+  position: relative;
+  float: right;
+}
+
+#pllogo {
+  width: 500px;
+  height: 700px;
 }
 
 #border1 {
@@ -100,7 +136,7 @@ body {
   border-radius: 40px;
   box-sizing: border-box;
   width: 710px;
-  height: 200px;
+  height: 225px;
   padding: 30px;
 
 }
@@ -109,8 +145,8 @@ body {
   border: 5px solid #f8f8ff;
   border-radius: 40px;
   box-sizing: border-box;
+  margin-top: 10px;
   width: 710px;
-  height: 200px;
   padding: 30px;
 }
 
@@ -119,14 +155,23 @@ body {
   border-radius: 40px;
   box-sizing: border-box;
   width: 710px;
-  height: 180px;
+  height: 260px;
   padding: 30px;
+}
+
+#h1skills {
+  padding: 40px;
 }
 
 #skills {
   font-family: nunito;
   font-size: 20px;
+  margin-left: 20px;
   color: white;
+}
+
+#h1contact {
+  padding: 40px;
 }
 
 #contact {
@@ -134,6 +179,7 @@ body {
   font-size: 20px;
   color: white;
   margin-top: 80px;
+  height: 800px;
 }
 
 li {
